--- a/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
@@ -216,7 +216,7 @@
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.out_direccion}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                                 <h:panelGroup>
-                                    <p:inputText id="itAddress" value="#{outletCrearBean.address}" label="#{msg.out_direccion}" required="true"/>
+                                    <p:inputText id="itAddress" value="#{outletCrearBean.address}" label="#{msg.out_direccion}"/>
                                     <p:message for="itAddress"/>
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.loc_latitude}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
