--- a/DiageoMDMWeb/src/main/webapp/admin/usuario/popupCreateUser.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/usuario/popupCreateUser.xhtml
@@ -98,6 +98,10 @@ and open the template in the editor.
                             <p:selectBooleanCheckbox value="#{segmentDistributor.subSegmentCheck eq '1'}" disabled="true"/>
                             <h:outputLabel value="#{gestionarUsuarioCreacion.subSegmentName(segmentDistributor.subSegmentId)}"/>                            
                         </p:column>
+                        <p:column headerText="#{msg.out_potencial}">
+                            <p:selectBooleanCheckbox value="#{segmentDistributor.potentialCheck eq '1'}" disabled="true"/>
+                            <h:outputLabel value="#{gestionarUsuarioCreacion.potentialName(segmentDistributor.potentialId)}"/>
+                        </p:column>
                         <p:column>
                             <p:commandLink value="#{msg.btn_remove}" style="color: blue" update="formCreateUserModal:dtSegmentSelect"
                                            process="@this" actionListener="#{gestionarUsuarioCreacion.removePermissionFromPopup(segmentDistributor)}"/>
