--- a/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTable.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTable.xhtml
@@ -25,12 +25,13 @@ and open the template in the editor.
                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                      style="font-size:  90%;word-wrap: break-word;width:200%" 
                      rendered="#{outletConsultarBean.renderDataTable()}" paginator="true"
-                     widgetVar="dtOutletSearch2" 
+                     widgetVar="dtOutletSearch2"
                      rowKey="#{outdtNew2.outletId}"
                      filteredValue="#{outletConsultarBean.listOutletsFilter}"
                      emptyMessage="#{msg.out_msg_not_record}"
                      filterEvent="enter"> 
-            <p:column style="width: 8%;text-align: center">
+            <p:ajax event="filter" listener="#{outletConsultarBean.listenerFilterList}"/>
+            <p:column style="width: 8%;text-align: center" exportable="false">
                 <p:commandLink value="#{msg.btn_edit}" style="color: blue" process="@all" update="@form"
                                actionListener="#{outletConsultarBean.seeDetail(outdtNew2)}" disabled="#{outdtNew2.disabledButtonEdit}"/>
                 <br/><br/>
@@ -43,24 +44,18 @@ and open the template in the editor.
                 <f:facet name="filter">
                     <p:selectOneMenu onchange="PF('dtOutletSearch2').filter()" style="width: 80%">
                         <f:selectItem itemLabel="#{msg.seleccion}" itemValue="#{null}" noSelectionOption="true"/>
-                        <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                            <f:selectItem itemValue="PENDING_TMC" itemLabel="#{msg.sta_pending_tmc}" />
-                        </c:if>
-                        <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                            <f:selectItem itemValue="REJECT" itemLabel="#{msg.sta_reject}"/>
-                        </c:if>
-                        <c:if test="#{outletConsultarBean.renderPendingCMStatus}">
-                            <f:selectItem itemValue="PENDING_COMMERCIAL_MANAGER" itemLabel="#{msg.sta_pending_commercial_manager}"/>
-                        </c:if>
-                        <c:if test="#{outletConsultarBean.renderApprovedStatus}">
-                            <f:selectItem itemValue="APPROVED" itemLabel="#{msg.sta_approval}"/>
-                        </c:if>
+                        <f:selectItem itemValue="PENDING_TMC" itemLabel="#{msg.sta_pending_tmc}" />
+                        <f:selectItem itemValue="PENDING_TMC_POTENTIAL" itemLabel="#{msg.sta_pending_tmc_potential}" />
+                        <f:selectItem itemValue="REJECT" itemLabel="#{msg.sta_reject}"/>
+                        <f:selectItem itemValue="PENDING_COMMERCIAL_MANAGER" itemLabel="#{msg.sta_pending_commercial_manager}"/>
+                        <f:selectItem itemValue="APPROVED" itemLabel="#{msg.sta_approval}"/>
                     </p:selectOneMenu>
                 </f:facet>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_reject}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'REJECT'}" style="color: red" escape="false"/>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'PENDING_TMC'}" style="color: blue" escape="false"/>
+                <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc_potential}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'PENDING_TMC_POTENTIAL'}" style="color: blue" escape="false"/>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_commercial_manager}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'PENDING_COMMERCIAL_MANAGER'}" style="color: sienna" escape="false"/>
-                <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'APPROVED'}" style="color: greenyellow" escape="false"/>
+                <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew2.statusMDM eq 'APPROVED'}" style="color: green" escape="false"/>
             </p:column>
             <p:column headerText="#{msg.out_approbation_massive}" rendered="#{outletConsultarBean.renderMassiveApproval}">
                 <p:selectBooleanCheckbox value="#{outdtNew2.approbationMassive}"/>
