--- a/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTableLazyDataModel.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTableLazyDataModel.xhtml
@@ -10,24 +10,26 @@ and open the template in the editor.
       xmlns:pe="http://primefaces.org/ui/extensions"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">    
-    <h:commandLink rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">     
+    <p:remoteCommand name="scritpListenerFilter" actionListener="#{outletConsultarBean.listenerFilter}" />
+    <!--h:commandLink rendered="{outletConsultarBean.renderDataTableLazyDataModel()}">
         <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
         <pe:exporter type="xlsx" target="dtOutletNew"  fileName="Report" pageOnly="false"/>
     </h:commandLink>
-    <h:commandLink rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}">
+    <h:commandLink rendered="{outletConsultarBean.renderDataTableLazyDataModel()}">
         <p:graphicImage name="/images/iconos/csv.png" width="5%"/>
         <p:dataExporter type="csv" target="dtOutletNew" fileName="Report" pageOnly="false" />
-    </h:commandLink>
+    </h:commandLink-->
     <br/>
-    <p:scrollPanel style="width:100%;height: 100%" rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}">
-        <p:dataTable id="dtOutletNew" value="#{outletConsultarBean.outletsLazyDataModel}" var="outdtNew" paginatorAlwaysVisible="false" rows="15"
+    <p:scrollPanel style="width:100%" rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}" mode="native">
+        <p:dataTable id="dtOutletNew" value="#{outletConsultarBean.outletsLazyDataModel}" var="outdtNew" paginatorAlwaysVisible="true" rows="15"
                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                      style="font-size:  90%;word-wrap: break-word;font-size: 9px !important;width:200%" 
                      rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}" paginator="true"
-                     widgetVar="dtOutletSearch" lazy="true"
-                     emptyMessage="#{msg.out_msg_not_record}" filterEvent="enter"> 
-            <p:ajax event="filter" />
+                     widgetVar="dtOutletSearch" lazy="true" 
+                     emptyMessage="#{msg.out_msg_not_record}" filterEvent="enter" rowKey="#{outdtNew.outletId}"
+                     selectionMode="multiple" selection="#{outletConsultarBean.listOutletsFilter}"> 
+            <p:ajax event="filter"/>
             <p:column style="width: 8%;text-align: center" exportable="false" >
                 <p:commandLink value="#{msg.btn_edit}" style="color: blue" process="@all" update="@form"
                                actionListener="#{outletConsultarBean.seeDetail(outdtNew)}" disabled="#{outdtNew.disabledButtonEdit}"/>
@@ -41,24 +43,18 @@ and open the template in the editor.
                 <f:facet name="filter">
                     <p:selectOneMenu onchange="PF('dtOutletSearch').filter()" style="width: 80%">
                         <f:selectItem itemLabel="#{msg.seleccion}" itemValue="#{null}" noSelectionOption="true"/>
-                        <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                            <f:selectItem itemValue="PENDING_TMC" itemLabel="#{msg.sta_pending_tmc}" />
-                        </c:if>
-                        <c:if test="#{outletConsultarBean.renderPendingTMCRejectStatus}">
-                            <f:selectItem itemValue="REJECT" itemLabel="#{msg.sta_reject}"/>
-                        </c:if>
-                        <c:if test="#{outletConsultarBean.renderPendingCMStatus}">
-                            <f:selectItem itemValue="PENDING_COMMERCIAL_MANAGER" itemLabel="#{msg.sta_pending_commercial_manager}"/>
-                        </c:if>
-                        <c:if test="#{outletConsultarBean.renderApprovedStatus}">
-                            <f:selectItem itemValue="APPROVED" itemLabel="#{msg.sta_approval}"/>
-                        </c:if>
+                        <f:selectItem itemValue="PENDING_TMC" itemLabel="#{msg.sta_pending_tmc}" />
+                        <f:selectItem itemValue="PENDING_TMC_POTENTIAL" itemLabel="#{msg.sta_pending_tmc_potential}" />
+                        <f:selectItem itemValue="REJECT" itemLabel="#{msg.sta_reject}"/>
+                        <f:selectItem itemValue="PENDING_COMMERCIAL_MANAGER" itemLabel="#{msg.sta_pending_commercial_manager}"/>
+                        <f:selectItem itemValue="APPROVED" itemLabel="#{msg.sta_approval}"/>
                     </p:selectOneMenu>
                 </f:facet>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_reject}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'REJECT'}" style="color: red" escape="false"/>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_TMC'}" style="color: blue" escape="false"/>
+                <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc_potential}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_TMC_POTENTIAL'}" style="color: blue" escape="false"/>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_commercial_manager}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_COMMERCIAL_MANAGER'}" style="color: sienna" escape="false"/>
-                <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'APPROVED'}" style="color: greenyellow" escape="false"/>
+                <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'APPROVED'}" style="color: green" escape="false"/>
             </p:column>
             <p:column headerText="#{msg.out_approbation_massive}" rendered="#{outletConsultarBean.renderMassiveApproval}">
                 <p:selectBooleanCheckbox value="#{outdtNew.approbationMassive}"/>
