--- a/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTableLazyDataModel.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTableLazyDataModel.xhtml
@@ -7,11 +7,8 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:pe="http://primefaces.org/ui/extensions"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">     
-    <p:remoteCommand name="scritpListenerFilter" actionListener="#{outletConsultarBean.listenerFilter}" />
+      xmlns:f="http://xmlns.jcp.org/jsf/core">         
     <!--h:commandLink rendered="{outletConsultarBean.renderDataTableLazyDataModel()}">
         <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
         <pe:exporter type="xlsx" target="dtOutletNew"  fileName="Report" pageOnly="false"/>
@@ -29,7 +26,7 @@ and open the template in the editor.
                      widgetVar="dtOutletSearch" lazy="true" 
                      emptyMessage="#{msg.out_msg_not_record}" filterEvent="enter" rowKey="#{outdtNew.outletId}"
                      selectionMode="multiple" selection="#{outletConsultarBean.listOutletsFilter}"> 
-            <p:ajax event="filter"/>
+            <p:ajax event="filter" listener="#{outletConsultarBean.listenerFilterList}"/>
             <p:column style="width: 8%;text-align: center" exportable="false" >
                 <p:commandLink value="#{msg.btn_edit}" style="color: blue" process="@all" update="@form"
                                actionListener="#{outletConsultarBean.seeDetail(outdtNew)}" disabled="#{outdtNew.disabledButtonEdit}"/>
@@ -55,9 +52,6 @@ and open the template in the editor.
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc_potential}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_TMC_POTENTIAL'}" style="color: blue" escape="false"/>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_commercial_manager}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_COMMERCIAL_MANAGER'}" style="color: sienna" escape="false"/>
                 <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'APPROVED'}" style="color: green" escape="false"/>
-            </p:column>
-            <p:column headerText="#{msg.out_approbation_massive}" rendered="#{outletConsultarBean.renderMassiveApproval}">
-                <p:selectBooleanCheckbox value="#{outdtNew.approbationMassive}"/>
             </p:column>            
             <p:column headerText="#{msg.out_razon_social}" filterBy="#{outdtNew.businessName}" 
                       filterMatchMode="startsWith">                
